upload code terbaru

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </div>
             <div class="featured-text-info">
               <p>
-                "Saya adalah seorang profesional dengan pengalaman dalam bidang Data Engineer, Data Analyst, dan Full Stack Developer."
+                "Saya adalah seorang mahasiswa semester 5 program studi Sistem Informasi yang tertarik pada pengembangan teknologi dan inovasi digital. Saat ini, saya sedang mendalami berbagai teknologi terbaru yang dapat membantu dalam menciptakan solusi-solusi berbasis digital yang efisien dan bermanfaat."
               </p>
             </div>
             <div class="featured-text-btn">
@@ -91,10 +91,19 @@
                 </a>
               </div>
               <div class="social_icons">
-                <div class="icon"><i class="uil uil-instagram"></i></div>
-                <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
+                <div class="icon">
+                  <a href="https://www.instagram.com/m4likaadlp/?next=%2F" target="_blank">
+                  <i class="uil uil-instagram"></i></a>
+                </div>
+                <div class="icon">
+                  <a href="https://www.linkedin.com/in/malika-adelia-putri-468bba168/" target="_blank">
+                  <i class="uil uil-linkedin-alt"></i></a>
+                </div>
                 <div class="icon"><i class="uil uil-dribbble"></i></div>
-                <div class="icon"><i class="uil uil-github-alt"></i></div>
+                <div class="icon">
+                  <a href="https://github.com/malikaputri22" target="_blank">
+                  <i class="uil uil-github-alt"></i></a>
+                </div>
               </div>
             </div>
           </div>
@@ -119,11 +128,12 @@
           <div class="row">
             <div class="col">
               <div class="about-info">
-                <h3>My introduction</h3>
+                <h3>About Project</h3>
                 <p>
-                  "Saya adalah seorang profesional yang memiliki pengalaman di bidang Data Engineering, Data Analysis, dan Full Stack Development. Dengan keahlian dalam membangun infrastruktur data yang efisien, mengoptimalkan alur pemrosesan data, serta menganalisis data untuk menghasilkan wawasan yang bernilai, saya mampu mendukung pengambilan keputusan yang berbasis data."
+                  "Pada proyek kelompok Obelix Sea View, kami merancang website wisata yang berfokus pada destinasi Obelix Sea View menggunakan Figma. Website ini dirancang untuk memberikan pengalaman interaktif dengan menyediakan fitur-fitur seperti menu makanan, dokumentasi wisata, dan paket foto yang memudahkan pengguna dalam mendapatkan informasi lengkap terkait layanan wisata. Selanjutnya, pada proyek mandiri untuk mata kuliah Desain UI/UX, saya mengembangkan antarmuka admin mobile untuk Toko Lestari. Antarmuka ini dirancang dengan fitur CRUD (Create, Read, Update, Delete) yang memungkinkan pengelolaan data dengan mudah dan efisien. Selain itu, dalam proyek kelompok Heritage.co, kami membangun website untuk layanan sewa baju adat yang berlokasi di Malioboro. Website ini menampilkan jenis-jenis baju adat yang tersedia, informasi harga sewa, dan paket sewa yang mempermudah pengguna untuk memilih dan menyewa pakaian adat sesuai kebutuhan. Proyek kelompok lainnya, Wanderlust, berfokus pada pengembangan website wisata untuk Grojogan Watu Purbo. Website ini dilengkapi dengan dokumentasi wisata, peta lokasi, informasi kontak, fasilitas wisata, dan galeri foto, sehingga memberikan informasi lengkap bagi pengunjung yang ingin merencanakan kunjungan ke destinasi tersebut."
                 </p>
                 <div class="about-btn">
+                  <a href="https://drive.google.com/file/d/1l67m-AP2GaXXsjfNmcGGIUdqngNosgkR/view?usp=sharing" target="_blank">
                   <button class="btn">
                     Download CV <i class="uil uil-import"></i>
                   </button>
@@ -138,11 +148,7 @@
                 <div class="skills-list">
                   <span>HTML</span>
                   <span>CSS</span>
-                  <span>Bootstrap</span>
                   <span>JavaScript</span>
-                  <span>Vue</span>
-                  <span>React</span>
-                  <span>Angular</span>
                 </div>
               </div>
               <div class="skills-box">
@@ -152,8 +158,6 @@
                 <div class="skills-list">
                   <span>PHP</span>
                   <span>JAVA</span>
-                  <span>Python</span>
-                  <span>C++</span>
                 </div>
               </div>
               <div class="skills-box">
@@ -162,8 +166,16 @@
                 </div>
                 <div class="skills-list">
                   <span>MySQL</span>
-                  <span>PostgreSQL</span>
-                  <span>MongoDB</span>
+                </div>
+              </div>
+              <div class="skills-box">
+                <div class="skills-header">
+                  <h3>Perangkat Lunak Pemrosesan</h3>
+                </div>
+                <div class="skills-list">
+                  <span>MS Words</span>
+                  <span>MS Excel</span>
+                  <span>MS PowerPoint</span>
                 </div>
               </div>
             </div>
@@ -171,71 +183,72 @@
         </section>
 
         <!-- -------------- PROJECT BOX ---------------- -->
-
         <section class="section" id="projects">
           <div class="top-header">
             <h1>Projects</h1>
           </div>
           <div class="project-container">
-            <div 
-              class="project-box"
-              onClick="window.location.href='https://drive.google.com/file/d/1l67m-AP2GaXXsjfNmcGGIUdqngNosgkR/view?usp=sharing'"
-            >
-              <i class="uil uil-briefcase-alt"></i>
-              <h3>Curriculum Vitae</h3>
-              <label>Profil</label>
-            </div>
-            <div 
-              class="project-box"
-              onClick="window.open('https://www.figma.com/design/gxrycC6QFiOtXS64r5rsBL/Untitled?node-id=0-1&t=O2NiLFplupdtjdkd-1', '_blank')"
-            >
+            <div class="project-box"
+              onClick="window.open('https://www.figma.com/design/gxrycC6QFiOtXS64r5rsBL/Untitled?node-id=0-1&t=O2NiLFplupdtjdkd-1', '_blank')">
               <i class="uil uil-users-alt"></i>
-              <h3>Project</h3>
-              <label>Project yang telah dikerjakan</label>
+              <h3>Obelix Sea View Web Figma</h3>
+              <label>Responsive Design</label>
             </div>
-            <div class="project-box">
-              <i class="uil uil-comment-heart"></i>
-              <h3>Chat apps</h3>
-              <label>Simple and Secure Chat-app</label>
+            <div class="project-box"
+              onClick="window.open('https://www.figma.com/proto/hRNUMNRlkiCRWgtjagQDQs/Untitled?page-id=0%3A1&node-id=1-2368&viewport=505%2C200%2C0.16&t=MCtr7EMYAzZP4kGD-1&scaling=min-zoom&content-scaling=fixed&starting-point-node-id=1%3A2287&share=1', '_blank')">
+              <i class="uil uil-users-alt"></i>
+              <h3>Web Mobile Toko Lestari</h3>
+              <label>Mobile Web Interface</label>
+            </div>
+            <div class="project-box"
+            onClick="window.open('localhost:8000/', '_blank')">
+            <i class="uil uil-users-alt"></i>
+            <h3>Web Heritage.co</h3>
+            <label>Custom Shirt Rental Provider Web</label>
+            </div>
+            <div class="project-box"
+            onClick="window.open('https://malikaputri22.github.io/ProjectWonderlust/', '_blank')">
+            <i class="uil uil-users-alt"></i>
+            <h3>Web Wanderlust</h3>
+            <label>Grojogan Watu Purbo</label>
             </div>
           </div>
         </section>
 
         <!-- -------------- CONTACT BOX ---------------- -->
+<section class="section" id="contact">
+  <div class="top-header">
+    <h1>Get in touch</h1>
+    <span>Do you have a project in your mind, contact me here</span>
+  </div>
+  <div class="row">
+    <div class="col">
+      <div class="contact-info">
+        <h2>Find Me <i class="uil uil-corner-right-down"></i></h2>
+        <p><i class="uil uil-envelope"></i> Email: <a href="mailto:malikaadeliaputri@gmail.com">malikaadeliaputri@gmail.com</a></p>
+        <p><i class="uil uil-phone"></i> Call/Whatsapp : <a href="https://wa.me/6282262694263">082262694263</a></p>
+      </div>
+    </div>
+    <div class="col">
+      <div class="form-control">
+        <div class="form-inputs">
+          <input type="text" class="input-field" placeholder="Name" />
+          <input type="email" class="input-field" placeholder="Email" />
+        </div>
+        <div class="text-area">
+          <textarea placeholder="Message"></textarea>
+        </div>
+        <div class="form-button">
+          <a href="https://wa.me/6282262694263" target="_blank">
+            <button class="btn">
+              Send <i class="uil uil-message"></i>
+            </button>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
 
-        <section class="section" id="contact">
-          <div class="top-header">
-            <h1>Get in touch</h1>
-            <span>Do you have a project in your mind, contact me here</span>
-          </div>
-          <div class="row">
-            <div class="col">
-              <div class="contact-info">
-                <h2>Find Me <i class="uil uil-corner-right-down"></i></h2>
-                <p><i class="uil uil-envelope"></i> Email: malikaadeliaputri@gmail.com</p>
-                <p><i class="uil uil-phone"></i> Call/Whatsapp : 082262694263</p>
-              </div>
-            </div>
-            <div class="col">
-              <div class="form-control">
-                <div class="form-inputs">
-                  <input type="text" class="input-field" placeholder="Name" />
-                  <input type="text" class="input-field" placeholder="Email" />
-                </div>
-                <div class="text-area">
-                  <textarea placeholder="Message"></textarea>
-                </div>
-
-                <div class="form-button">
-                  <a href="https://wa.me/6282262694263" target="_blank">
-                  <button class="btn">
-                    Send <i class="uil uil-message"></i>
-                  </button>
-                  </a>
-                </div>
-              </div>
-            </div>
-          </div>
         </section>
       </main>
 
@@ -272,7 +285,9 @@
             </a>
           </div>
           <div class="icon"><i class="uil uil-dribbble"></i></div>
-          <div class="icon"><i class="uil uil-github-alt"></i></div>
+          <div class="icon">
+            <a href="https://github.com/malikaputri22" target="_blank">
+            <i class="uil uil-github-alt"></i></div>
         </div>
         
         <div class="bottom-footer">
