--- a/tutorial.html
+++ b/tutorial.html
@@ -37,19 +37,24 @@
               <div class="circle"></div>
             </li>
             <li class="nav_list">
-              <a href="table.html" class="nav-link">Tabel</a>
-              <div class="circle"></div>
-            </li>
-            <li class="nav_list">
               <a href="form.html" class="nav-link">Form</a>
               <div class="circle"></div>
             </li>
             <li class="nav_list">
-              <a href="tutorial.html" class="nav-link">Tutorial</a>
+              <a href="loc.html" class="nav-link">API</a>
               <div class="circle"></div>
             </li>
             <li class="nav_list">
-              <a href="#contact" class="nav-link">Contact</a>
+              <a href="tabel.html" class="nav-link">Tabel</a>
+              <div class="circle"></div>
+            </li>
+            
+            <li class="nav_list">
+              <a href="kanvas.html" class="nav-link">Canvas</a>
+              <div class="circle"></div>
+            </li>
+            <li class="nav_list">
+              <a href="deploy.html" class="nav-link">Deploy</a>
               <div class="circle"></div>
             </li>
           </ul>
@@ -80,27 +85,38 @@
               <label>Learn how to build forms with HTML</label>
             </div>
             <div
-              class="project-box"
-              onClick="window.location.href='html5.html'"
-            >
-              <i class="uil uil-browser"></i>
-              <h3>Tutorial HTML5</h3>
+              class="project-box" onClick="window.location.href='loc.html'">
+              <i class="uil uil-location-point"></i>
+              <h3>Tutorial HTML5 -API Geolocation</h3>
               <label>Learn how to build website using HTML5</label>
             </div>
             <!-- Tutorial Tabel -->
             <div
               class="project-box"
-              onClick="window.location.href='table.html'"
+              onClick="window.location.href='tabel.html'"
             >
               <i class="uil uil-table"></i>
               <h3>Tabel Tutorial</h3>
               <label>Master creating and styling tables in HTML</label>
             </div>
+             <!-- Tutorial Canvas -->
+            <div class="project-box" onClick="window.location.href='kanvas.html'">
+              <i class="uil uil-paint-tool"></i>
+              <h3>Canvas Tutorial</h3>
+              <label>Explore HTML5 Canvas for graphics and animations</label>
+            </div>
+
+            <!-- Tutorial Deploy to GitHub -->
+            <div class="project-box" onClick="window.location.href='deploy.html'">
+              <i class="uil uil-github-alt"></i>
+              <h3>Deploy to GitHub</h3>
+              <label>Learn how to deploy your web project to GitHub</label>
+            </div>
           </div>
         </section>
       </main>
 
-      --------------- FOOTER ---------------
+      <!--------------- FOOTER --------------->
       <footer>
         <div class="top-footer">
           <!-- <p>Tutorial</p> -->
