--- a/loc.html
+++ b/loc.html
@@ -3,16 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- --------- CSS ---------- -->
+    <link rel="stylesheet" href="assets/css/style.css" />
+
+    <!-- --------- UNICONS ---------- -->
+    <link
+      rel="stylesheet"
+      href="https://unicons.iconscout.com/release/v4.0.8/css/line.css"
+    />
+
     <title>Geolocation API</title>
     <style>
       /* Body styling */
       body {
-        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
         margin: 0;
         padding: 0;
-        background-color: #6d7680;
+        background-color: #0b1957; 
         display: flex;
-        justify-content: center;
+        flex-direction: column;
         align-items: center;
         height: 100vh;
       }
@@ -20,12 +28,13 @@
       /* Container for content */
       .container {
         text-align: center;
-        background-color: #9dcce9;
+        background-color: #d2b3db; 
         border-radius: 15px;
         padding: 40px;
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
         max-width: 500px;
         width: 100%;
+        margin-top: 200px;
       }
 
       h1 {
@@ -36,7 +45,7 @@
 
       /* Stylish button */
       button {
-        background-color: #007bff;
+        background-color: #443791;
         color: #fff;
         border: none;
         padding: 15px 30px;
@@ -46,8 +55,23 @@
         transition: background-color 0.3s ease;
       }
 
+      /* Button Download */
+      .nav-button .btn {
+        padding: 8px 16px;
+        border: none;
+        border-radius: 4px;
+        background-color: #efefef;
+        color: rgb(0, 0, 0);
+        text-decoration: none;
+        cursor: pointer;
+      }
+      .nav-button .btn:hover {
+        background-color: #426bc2;
+        color: rgb(255, 255, 255);
+      }
+
       button:hover {
-        background-color: #0056b3;
+        background-color: #426bc2;
       }
 
       /* Location result box */
@@ -55,7 +79,7 @@
         margin-top: 20px;
         padding: 20px;
         border-radius: 15px;
-        background-color: #e9f7f9;
+        background-color: #faf3ec;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
         display: none;
       }
@@ -63,7 +87,7 @@
       h3 {
         margin-bottom: 10px;
         font-size: 20px;
-        color: #007bff;
+        color: #c5705d;
       }
 
       p {
@@ -71,20 +95,185 @@
         color: #555;
         margin: 5px 0;
       }
+
+      /* Tutorial scroll box */
+      #tutorial {
+        margin-top: 20px;
+        padding: 20px;
+        border-radius: 15px;
+        background-color: #fff;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
+        max-height: 150px; /* Limit the height */
+        overflow-y: auto; /* Add vertical scroll */
+        font-family: monospace;
+        text-align: left;
+        white-space: pre-wrap; /* Preserve line breaks */
+        color: #333;
+      }
+
+      .wrapper {
+        margin-top: 20px;
+        padding: 20px;
+        border-radius: 15px;
+        background-color: #fff;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
+        max-width: 500px;
+        width: 100%;
+        text-align: left;
+        font-family: monospace;
+        color: #333;
+        overflow-y: auto;
+      }
+
+      .wrapper h2 {
+        color: #c5705d;
+        font-size: 20px;
+        margin-bottom: 10px;
+      }
+
+      .wrapper h3 {
+        font-size: 16px;
+        color: #333;
+        margin: 10px 0;
+      }
+
+      .wrapper p {
+        font-size: 14px;
+        color: #555;
+        margin: 5px 0;
+      }
+
+      .wrapper pre {
+        background-color: #f8f8f8;
+        padding: 10px;
+        border-radius: 8px;
+        font-size: 14px;
+        overflow-x: auto;
+      }
     </style>
   </head>
   <body>
-    <div class="container"> 
+    <!-- --------------- HEADER --------------- -->
+    <nav id="header">
+      <div class="nav-logo">
+        <p class="nav-name">GeolocationAPI</p>
+        <span>.</span>
+      </div>
+      <div class="nav-menu" id="myNavMenu">
+        <ul class="nav_menu_list">
+          <li class="nav_list">
+            <a href="index.html" class="nav-link active-link">Home</a>
+            <div class="circle"></div>
+          </li>
+          <li class="nav_list">
+            <a href="form.html" class="nav-link">Tutorial</a>
+            <div class="circle"></div>
+          </li>
+          <li class="nav_list">
+            <a href="form.html" class="nav-link">Form</a>
+            <div class="circle"></div>
+          </li>
+          <li class="nav_list">
+            <a href="tabel.html" class="nav-link">Tabel</a>
+            <div class="circle"></div>
+          </li>
+          <li class="nav_list">
+            <a href="loc.html" class="nav-link">API</a>
+            <div class="circle"></div>
+          </li>
+          <li class="nav_list">
+            <a href="kanvas.html" class="nav-link">Canvas</a>
+            <div class="circle"></div>
+          </li>
+          <li class="nav_list">
+            <a href="deploy.html" class="nav-link">Deploy</a>
+            <div class="circle"></div>
+          </li>
+        </ul>
+      </div>
+      <div class="nav-button">
+        <button class="btn">
+          Download CV <i class="uil uil-file-alt"></i>
+        </button>
+      </div>
+      <div class="nav-menu-btn">
+        <i class="uil uil-bars" onclick="myMenuFunction()"></i>
+      </div>
+    </nav>
+
+    <div class="container">
       <h1>Get User Location with Geolocation API</h1>
       <button onclick="getLocation()">Get Location</button>
 
-      <div id="location"> 
+      <div id="location">
         <h3>Your Location:</h3>
         <p>Latitude: <span id="latitude"></span></p>
         <p>Longitude: <span id="longitude"></span></p>
         <p>Accuracy: <span id="accuracy"></span> meters</p>
       </div>
     </div>
+
+    <main class="wrapper">
+      <h2>Cara Menggunakan Geolocation API</h2>
+      <p>
+        Geolocation API memungkinkan Anda untuk mengakses lokasi pengguna dengan
+        izin mereka. Berikut ini adalah langkah-langkah untuk memulai:
+      </p>
+
+      <h3>Langkah 1: Cek Dukungan Geolocation</h3>
+      <p>
+        Gunakan JavaScript untuk memastikan bahwa browser mendukung Geolocation
+        API.
+      </p>
+      <pre><code>if (navigator.geolocation) {
+  // Geolocation didukung oleh browser
+}</code></pre>
+
+      <h3>Langkah 2: Mendapatkan Lokasi Pengguna</h3>
+      <p>
+        Untuk mendapatkan lokasi saat ini, gunakan metode
+        <code>getCurrentPosition</code>, yang memerlukan dua fungsi callback:
+        satu untuk keberhasilan dan satu lagi untuk menangani error.
+      </p>
+      <pre><code>navigator.geolocation.getCurrentPosition(successCallback, errorCallback);</code></pre>
+
+      <h3>Langkah 3: Menampilkan Data Lokasi</h3>
+      <p>
+        Di dalam <code>successCallback</code>, Anda bisa mengakses latitude,
+        longitude, dan tingkat akurasi lokasi pengguna.
+      </p>
+      <pre><code>function successCallback(position) {
+  const latitude = position.coords.latitude;
+  const longitude = position.coords.longitude;
+  const accuracy = position.coords.accuracy;
+  console.log('Latitude:', latitude);
+  console.log('Longitude:', longitude);
+  console.log('Akurasi:', accuracy);
+}</code></pre>
+
+      <h3>Langkah 4: Menangani Error</h3>
+      <p>
+        Jika ada masalah (seperti penolakan pengguna atau lokasi tidak
+        tersedia), <code>errorCallback</code> akan memberikan kode error
+        tertentu.
+      </p>
+      <pre><code>function errorCallback(error) {
+  switch (error.code) {
+    case error.PERMISSION_DENIED:
+      console.log("Pengguna menolak permintaan untuk Geolocation.");
+      break;
+    case error.POSITION_UNAVAILABLE:
+      console.log("Informasi lokasi tidak tersedia.");
+      break;
+    case error.TIMEOUT:
+      console.log("Permintaan lokasi melebihi waktu yang ditentukan.");
+      break;
+    case error.UNKNOWN_ERROR:
+      console.log("Terjadi kesalahan yang tidak diketahui.");
+      break;
+  }
+}</code></pre>
+    </main>
 
     <script>
       // Function to get user location
@@ -96,11 +285,13 @@
           alert("Geolocation is not supported by this browser.");
         }
 
-        // Add loading effect to the button (kalo loading)
-        const button = document.querySelector("button");
+        // Add loading effect to the button
+        const button = document.querySelector(
+          "button[onclick='getLocation()']"
+        );
         button.innerHTML = "Getting Location...";
         button.disabled = true;
-        button.style.backgroundColor = "#ccc";
+        button.style.backgroundColor = "#ceae98";
       }
 
       // Function to display position
@@ -117,13 +308,15 @@
         locationBox.style.display = "block";
 
         // Revert button state
-        const button = document.querySelector("button");
+        const button = document.querySelector(
+          "button[onclick='getLocation()']"
+        );
         button.innerHTML = "Get Location";
         button.disabled = false;
-        button.style.backgroundColor = "#007bff";
+        button.style.backgroundColor = "#b15945";
       }
 
-      // Function to handle errors 
+      // Function to handle errors
       function showError(error) {
         switch (error.code) {
           case error.PERMISSION_DENIED:
@@ -141,11 +334,67 @@
         }
 
         // Revert button state even in case of an error
-        const button = document.querySelector("button");
+        const button = document.querySelector(
+          "button[onclick='getLocation()']"
+        );
         button.innerHTML = "Get Location";
         button.disabled = false;
-        button.style.backgroundColor = "#007bff";
+        button.style.backgroundColor = "#c5705d";
       }
     </script>
-  </body>
+  <!-- --------------- FOOTER --------------- -->
+  <footer>
+    <div class="top-footer">
+      <p>Malika Adelia Putri</p>
+    </div>
+    <div class="middle-footer">
+      <ul class="footer-menu">
+        <li class="footer_menu_list">
+          <a href="#home">Home</a>
+        </li>
+        <li class="footer_menu_list">
+          <a href="#about">About</a>
+        </li>
+        <li class="footer_menu_list">
+          <a href="#projects">Projects</a>
+        </li>
+        <li class="footer_menu_list">
+          <a href="#contact">Contact</a>
+        </li>
+      </ul>
+    </div>
+    <div class="footer-social-icons">
+      <div class="icon">
+        <a href="https://www.instagram.com/m4likaadlp/?next=%2F" target="_blank">
+          <i class="uil uil-instagram"></i>
+        </a>
+      </div>
+      <div class="icon">
+        <a href="https://www.linkedin.com/in/malika-adelia-putri-468bba168/" target="_blank">
+          <i class="uil uil-linkedin-alt"></i>
+        </a>
+      </div>
+      <div class="icon"><i class="uil uil-dribbble"></i></div>
+      <div class="icon"><i class="uil uil-github-alt"></i></div>
+    </div>
+    
+    <div class="bottom-footer">
+      <p>
+        Copyright &copy;
+        <a href="#home" style="text-decoration: none">Malika</a> - All
+        rights reserved
+      </p>
+    </div>
+  </footer>
+</div>
+
+<!-- ----- TYPING JS Link ----- -->
+<script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+
+<!-- ----- SCROLL REVEAL JS Link----- -->
+<script src="https://unpkg.com/scrollreveal"></script>
+
+<!-- ----- MAIN JS ----- -->
+<script src="assets/js/main.js"></script>
+</body>
 </html>
