--- a/tabel.html
+++ b/tabel.html
@@ -72,7 +72,7 @@
       <!-- --------------- HEADER --------------- -->
       <nav id="header">
         <div class="nav-logo">
-          <p class="nav-name">Tutorial</p>
+          <p class="nav-name">Tabel</p>
           <span>.</span>
         </div>
         <div class="nav-menu" id="myNavMenu">
