update new code

--- a/tutorial.html
+++ b/tutorial.html
@@ -60,9 +60,11 @@
           </ul>
         </div>
         <div class="nav-button">
+          <a href="https://drive.google.com/file/d/1l67m-AP2GaXXsjfNmcGGIUdqngNosgkR/view?usp=sharing" target="_blank">
           <button class="btn">
             Download CV <i class="uil uil-file-alt"></i>
           </button>
+          </a>
         </div>
         <div class="nav-menu-btn">
           <i class="uil uil-bars" onclick="myMenuFunction()"></i>
@@ -116,37 +118,54 @@
         </section>
       </main>
 
-      <!--------------- FOOTER --------------->
+      <!-- --------------- FOOTER --------------- -->
       <footer>
         <div class="top-footer">
-          <!-- <p>Tutorial</p> -->
+          <p>Malika Adelia Putri</p>
         </div>
         <div class="middle-footer">
           <ul class="footer-menu">
             <li class="footer_menu_list">
-              <a href="#home">Home</a>
+              <a href="index.html">Home</a>
             </li>
             <li class="footer_menu_list">
-              <a href="#about">About</a>
+              <a href="form.html">Form</a>
             </li>
             <li class="footer_menu_list">
-              <a href="#projects">Projects</a>
+              <a href="loc.html">API</a>
             </li>
             <li class="footer_menu_list">
-              <a href="#contact">Contact</a>
+              <a href="tabel.html">Tabel</a>
+            </li>
+            <li class="footer_menu_list">
+              <a href="kanvas.html">Canvas</a>
+            </li>
+            <li class="footer_menu_list">
+              <a href="deploy.html">Deploy</a>
             </li>
           </ul>
         </div>
         <div class="footer-social-icons">
-          <div class="icon"><i class="uil uil-instagram"></i></div>
-          <div class="icon"><i class="uil uil-linkedin-alt"></i></div>
+          <div class="icon">
+            <a href="https://www.instagram.com/m4likaadlp/?next=%2F" target="_blank">
+              <i class="uil uil-instagram"></i>
+            </a>
+          </div>
+          <div class="icon">
+            <a href="https://www.linkedin.com/in/malika-adelia-putri-468bba168/" target="_blank">
+              <i class="uil uil-linkedin-alt"></i>
+            </a>
+          </div>
           <div class="icon"><i class="uil uil-dribbble"></i></div>
-          <div class="icon"><i class="uil uil-github-alt"></i></div>
+          <div class="icon">
+            <a href="https://github.com/malikaputri22" target="_blank">
+            <i class="uil uil-github-alt"></i></div>
         </div>
+        
         <div class="bottom-footer">
           <p>
             Copyright &copy;
-            <a href="#home" style="text-decoration: none">Nicholas</a> - All
+            <a href="#home" style="text-decoration: none">Malika</a> - All
             rights reserved
           </p>
         </div>
