--- a/index.html
+++ b/index.html
@@ -87,8 +87,7 @@
                 <a href="https://drive.google.com/file/d/1l67m-AP2GaXXsjfNmcGGIUdqngNosgkR/view?usp=sharing" target="_blank">
                   <button class="btn">
                     Download CV <i class="uil uil-import"></i>
-                  </button>
-                </a>
+                  </button></a>
               </div>
               <div class="social_icons">
                 <div class="icon">
@@ -115,8 +114,7 @@
           <div class="scroll-icon-box">
             <a href="#about" class="scroll-btn">
               <i class="uil uil-mouse-alt"></i>
-              <p>Scroll Down</p>
-            </a>
+              <p>Scroll Down</p></a>
           </div>
         </section>
 
