update new code

--- a/deploy.html
+++ b/deploy.html
@@ -150,7 +150,7 @@
           <li class="nav-item"><a href="tutorial.html" class="nav-link">Tutorial</a></li>
           <li class="nav-item"><a href="form.html" class="nav-link">Form</a></li>
           <li class="nav-item"><a href="tabel.html" class="nav-link">Tabel</a></li>
-          <li class="nav-item"><a href="loc.html" class="nav-link">API</a></li>
+          <li class="nav-item"><a href="location.html" class="nav-link">API</a></li>
           <li class="nav-item"><a href="kanvas.html" class="nav-link">Canvas</a></li>
           <li class="nav-item"><a href="deploy.html" class="nav-link">Deploy</a></li>
 
