--- a/tabel.html
+++ b/tabel.html
@@ -183,47 +183,49 @@
     <!-- --------------- FOOTER --------------- -->
     <footer>
         <div class="top-footer">
-            <p>Malika Adelia Putri</p>
+          <p>Malika Adelia Putri</p>
         </div>
         <div class="middle-footer">
-            <ul class="footer-menu">
-                <li class="footer_menu_list">
-                    <a href="#home">Home</a>
-                </li>
-                <li class="footer_menu_list">
-                    <a href="tabel.html">Cara Membuat Tabel</a>
-                </li>
-                <li class="footer_menu_list">
-                    <a href="form.html">Cara Membuat Form</a>
-                </li>
-                <li class="footer_menu_list">
-                    <a href="register.html">Cara Membuat Register</a>
-                </li>
-            </ul>
+          <ul class="footer-menu">
+            <li class="footer_menu_list">
+              <a href="index.html">Home</a>
+            </li>
+            <li class="footer_menu_list">
+              <a href="tabel.html">Cara Membuat Tabel</a>
+            </li>
+            <li class="footer_menu_list">
+              <a href="form.html">Cara Membuat Form</a>
+            </li>
+            <li class="footer_menu_list">
+              <a href="register.html">Cara Membuat Register</a>
+            </li>
+          </ul>
         </div>
         <div class="footer-social-icons">
-            <div class="icon">
-                <a href="https://www.instagram.com/m4likaadlp/?next=%2F" target="_blank">
-                    <i class="uil uil-instagram"></i>
-                </a>
-            </div>
-            <div class="icon">
-                <a href="https://www.linkedin.com/in/malika-adelia-putri-468bba168/" target="_blank">
-                    <i class="uil uil-linkedin-alt"></i>
-                </a>
-            </div>
-            <div class="icon"><i class="uil uil-dribbble"></i></div>
-            <div class="icon"><i class="uil uil-github-alt"></i></div>
+          <div class="icon">
+            <a href="https://www.instagram.com/m4likaadlp/?next=%2F" target="_blank">
+              <i class="uil uil-instagram"></i>
+            </a>
+          </div>
+          <div class="icon">
+            <a href="https://www.linkedin.com/in/malika-adelia-putri-468bba168/" target="_blank">
+              <i class="uil uil-linkedin-alt"></i>
+            </a>
+          </div>
+          <div class="icon"><i class="uil uil-dribbble"></i></div>
+          <div class="icon">
+            <a href="https://github.com/malikaputri22" target="_blank">
+            <i class="uil uil-github-alt"></i></div>
         </div>
-
+        
         <div class="bottom-footer">
-            <p>
-                Copyright &copy;
-                <a href="#home" style="text-decoration: none">Malika</a> - All
-                rights reserved
-            </p>
+          <p>
+            Copyright &copy;
+            <a href="#home" style="text-decoration: none">Malika</a> - All
+            rights reserved
+          </p>
         </div>
-    </footer>
+      </footer>
 
     <!-- ----- TYPING JS Link ----- -->
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
