--- a/tutorial.html
+++ b/tutorial.html
@@ -41,7 +41,7 @@
               <div class="circle"></div>
             </li>
             <li class="nav_list">
-              <a href="loc.html" class="nav-link">API</a>
+              <a href="location.html" class="nav-link">API</a>
               <div class="circle"></div>
             </li>
             <li class="nav_list">
@@ -132,7 +132,7 @@
               <a href="form.html">Form</a>
             </li>
             <li class="footer_menu_list">
-              <a href="loc.html">API</a>
+              <a href="location.html">API</a>
             </li>
             <li class="footer_menu_list">
               <a href="tabel.html">Tabel</a>
