--- a/Design_Web_P8-main/materi-css/latihan/latihan2.html
+++ b/Design_Web_P8-main/materi-css/latihan/latihan2.html
@@ -8,17 +8,51 @@
     <style>
       /* Gaya khusus untuk latihan warna dan border */
       .box {
-        border: 3px solid #ffd700; /* Border warna emas */
-        background-color: #333; /* Latar belakang gelap */
-        padding: 20px; /* Spasi dalam */
-        border-radius: 8px; /* Membuat sudut membulat */
-        color: #e0e0e0; /* Warna teks terang */
+        border: 20px solid #f3f1ec; /* Border warna putih, ketebalan kotak putih */
+        background-color: #ada0a0; /* Latar belakang gelap (tidak boleh hitam pekat) */
+        padding: 40px; /* Spasi dalam kotak, semakin angka kecil hurufnya semakin nempel kotak */
+        border-radius: 20px; /* Membuat sudut membulat */
+        color: #ad5252; /* Warna teks terang dalam kotak */
+        margin-bottom: 10px;
       }
       .colored-text {
-        color: #ff5733; /* Teks warna oranye terang */
-        font-size: 1.2rem; /* Ukuran font lebih besar */
+        color: #ff0000; /* Teks warna oranye terang */
+        font-size: 15px; /* Ukuran font lebih besar */
       }
     </style>
+    <style>
+      /* Gaya khusus untuk latihan warna dan border */
+      .box-merah {
+        border: 20px solid #f70b0b; /* Border warna putih, ketebalan kotak putih */
+        background-color: #3c3737; /* Latar belakang gelap (tidak boleh hitam pekat) */
+        padding: 40px; /* Spasi dalam kotak, semakin angka kecil hurufnya semakin nempel kotak */
+        border-radius: 20px; /* Membuat sudut membulat */
+        color: #f70b0b; /* Warna teks terang dalam kotak */
+        margin-bottom: 10px;
+      }
+      </style>
+      <style>
+      /* Gaya khusus untuk latihan warna dan border */
+      .box-kuning {
+        border: 20px solid #d3da0d; /* Border warna putih, ketebalan kotak putih */
+        background-color: #3c3737; /* Latar belakang gelap (tidak boleh hitam pekat) */
+        padding: 40px; /* Spasi dalam kotak, semakin angka kecil hurufnya semakin nempel kotak */
+        border-radius: 20px; /* Membuat sudut membulat */
+        color: #d3da0d; /* Warna teks terang dalam kotak */
+        margin-bottom: 10px;
+      }
+      </style>
+      <style>
+        /* Gaya khusus untuk latihan warna dan border */
+        .box-hijau {
+          border: 20px solid #1fde28; /* Border warna putih, ketebalan kotak putih */
+          background-color: #3c3737; /* Latar belakang gelap (tidak boleh hitam pekat) */
+          padding: 40px; /* Spasi dalam kotak, semakin angka kecil hurufnya semakin nempel kotak */
+          border-radius: 20px; /* Membuat sudut membulat */
+          color: #1fde28; /* Warna teks terang dalam kotak */
+          margin-bottom: 10px;
+        }
+        </style>
   </head>
   <body>
     <header>
@@ -32,6 +66,19 @@
       </div>
       <p class="colored-text">Teks ini memiliki warna oranye terang.</p>
     </main>
+    <main>
+      <!-- Contoh penerapan border dan warna -->
+      <h2>Contoh Border & Warna</h2>
+      <div class="box-merah">
+        Lampu Merah.
+      </div>
+    </main>
+    <div class="box-kuning">
+      Lampu Kuning.
+    </div>
+    <div class="box-hijau">
+      Lampu Hijau.
+    </div>
     <footer>
       <p>Kembali ke <a href="../index.html">halaman utama</a></p>
     </footer>
