upload syntax sia

--- a/Design_Web_P8-main/materi-css/latihan/latihan1.html
+++ b/Design_Web_P8-main/materi-css/latihan/latihan1.html
@@ -15,7 +15,9 @@
       } /* Membuat teks tebal */
       .custom-font {
         font-family: "Georgia", serif; /* Font khusus */
-        font-size: 24px; /* Ukuran font lebih besar */
+        font-size: 16px; /* Ukuran font lebih besar
+                            Pilihan lain: 
+                            - 16px: Ukuran Standar; */
       }
     </style>
   </head>
@@ -27,10 +29,10 @@
     <main>
       <!-- Contoh penerapan gaya teks -->
       <h2>Model Huruf</h2>
-      <p class="italic">Teks ini dibuat miring menggunakan CSS.</p>
-      <p class="bold">Teks ini dibuat tebal menggunakan CSS.</p>
+      <p class="italic">Malika Adelia Putri</p>
+      <p class="bold">5220311046</p>
       <p class="custom-font">
-        Teks ini menggunakan font khusus dan ukuran lebih besar.
+        Prodi: Sistem Informasi, Fakultas: Sains & Teknologi
       </p>
     </main>
     <!-- Footer -->
