--- a/loc.html
+++ b/loc.html
@@ -159,7 +159,7 @@
             <a href="form.html" class="nav-link">Form</a>
           </li>
           <li class="nav_list">
-            <a href="location.html" class="nav-link">API</a>
+            <a href="loc.html" class="nav-link">API</a>
           </li>
           <li class="nav_list">
             <a href="tabel.html" class="nav-link">Tabel</a>
@@ -326,7 +326,7 @@
         <ul class="footer-menu">
           <li class="footer_menu_list"><a href="index.html">Home</a></li>
           <li class="footer_menu_list"><a href="form.html">Form</a></li>
-          <li class="footer_menu_list"><a href="location.html">API</a></li>
+          <li class="footer_menu_list"><a href="loc.html">API</a></li>
           <li class="footer_menu_list"><a href="tabel.html">Tabel</a></li>
           <li class="footer_menu_list"><a href="kanvas.html">Canvas</a></li>
           <li class="footer_menu_list"><a href="deploy.html">Deploy</a></li>
