--- a/kanvas.html
+++ b/kanvas.html
@@ -154,7 +154,7 @@
               <div class="circle"></div>
             </li>
             <li class="nav_list">
-              <a href="location.html" class="nav-link">API</a>
+              <a href="loc.html" class="nav-link">API</a>
               <div class="circle"></div>
             </li>
             <li class="nav_list">
@@ -224,7 +224,7 @@
         <ul class="footer-menu">
           <li><a href="index.html">Home</a></li>
           <li><a href="form.html">Form</a></li>
-          <li><a href="location.html">API</a></li>
+          <li><a href="loc.html">API</a></li>
           <li><a href="tabel.html">Tabel</a></li>
           <li><a href="kanvas.html">Canvas</a></li>
           <li><a href="deploy.html">Deploy</a></li>
